First pass with something that works. Need to fix z-index on captionElement and arrows and figure out why it is failing on mobile.

--- a/src/css/default-skin/default-skin.scss
+++ b/src/css/default-skin/default-skin.scss
@@ -349,7 +349,7 @@ a.pswp__share--download {
 	max-width: 420px;
 	margin: 0 auto;
 	font-size: 13px;
-	padding: 10px;
+	padding: 20px 10px 10px 10px;
 	line-height: 20px;
 	color: #CCC;
 }
